@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-04-05T00:58:08Z",
+  "timestamp" : "2025-04-08T00:59:15Z",
   "count_outdated" : 529,
   "uniques_outdated" : 356,
-  "count" : 530,
-  "uniques" : 357,
+  "count" : 531,
+  "uniques" : 358,
   "clones" : [
     {
       "timestamp": "2025-04-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
